Closed Bug 512524 Opened 17 years ago Closed 17 years ago

Unable to set image as desktop background

Categories

(Firefox :: Shell Integration, defect)

3.6 Branch
All
Windows Vista
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 3.7a1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: kernow01, Assigned: zpao)

References

Details

(Keywords: regression, verified1.9.2)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a2pre) Gecko/20090825 Namoroka/3.6a2pre (.NET CLR 3.5.30729) Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.2a2pre) Gecko/20090825 Namoroka/3.6a2pre (.NET CLR 3.5.30729) Find any web page with an image and right click to produce 'Set as desk top background'. Left click topic and nothing happens. Reproducible: Always Steps to Reproduce: 1. Find page with image such as http://www.cornwallcam.co.uk/ 2. Right click to produce menu with item 'Set as desk top background 3. Left click topic Actual Results: Nothing Expected Results: Desk top wallpaper to have a new image hhh is possibly tracking back to find time of regression. He reports same issue on XP but not on Linux
Version: unspecified → 3.6 Branch
I can confirm using Windows XP. Works with... Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090801 Minefield/3.6a1pre Fails with... Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090802 Minefield/3.6a1pre WFM on Ubuntu 9.04 using the latest i686 nightly.
Hass, do you have the changesets between these two builds? See about:buildconfig.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a2pre) Gecko/20090825 Namoroka/3.6a2pre GTB5 (.NET CLR 3.5.30729) ID:20090825052618 also happening here.
re: Comment #2 20090801 build... http://hg.mozilla.org/mozilla-central/rev/c99ec9f95c64 20090802 build... http://hg.mozilla.org/mozilla-central/rev/8366e5cc9f57 I can look for the hourly build where this breaks in about 3 hours from now if that will help.
That should not be necessary. Given the following link it's clear which patch caused this regression. Bug 507032 is the culprit. http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c99ec9f95c64&tochange=8366e5cc9f57
Summary: Unable to create new wallpaper image → Unable to set a new desktop background image
To be clear, is this failing AFTER the dialog shows up and you click "Set Desktop Background" in the dialog? (that's where it's happening for me)
Component: Menus → Shell Integration
QA Contact: menus → shell.integration
Summary: Unable to set a new desktop background image → Unable to set image as desktop background
Flags: blocking-firefox3.6?
@Paul, yes. 1. View image. 2. Set position to any of the 3 options. 3. Click "Set as Desktop Background". 4. The Set Desktop Background closes but the wallpaper does not set.
Attached patch Patch v0.1 — — Splinter Review
Tested locally (on XP) and it works. I'll kick off a build to triple check that it works on WinCE (that other issue non-withstanding).
Assignee: nobody → paul
Status: NEW → ASSIGNED
Attachment #396613 - Flags: review?(robert.bugzilla)
Noting it also affects the trunk. Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.3a1pre) Gecko/20090825 Minefield/3.7a1pre (.NET CLR 3.5.30729)
(In reply to comment #8) > (that other issue non-withstanding). To be clear for those of you who are not me or Rob, it looks like the work in bug 507302 wasn't quite right & that while the registry is set, the system wasn't redrawing the desktop.
Hardware: x86 → All
Version: 3.6 Branch → Trunk
Version: Trunk → 3.6 Branch
Attachment #396613 - Flags: review?(robert.bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: blocking-firefox3.6? → blocking-firefox3.6+
Verified fixed with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090830 Minefield/3.7a1pre (.NET CLR 3.5.30729) ID:20090830050200 Do we have any tests in this area?
Status: RESOLVED → VERIFIED
Flags: in-testsuite?
Target Milestone: --- → Firefox 3.7a1
This needs a push to the 1.9.2 branch.
(In reply to comment #13) > This needs a push to the 1.9.2 branch. No it doesn't. The patch on bug 507032 hasn't been checked into 1.9.2 yet. So this regression is trunk only.
(In reply to comment #14) > (In reply to comment #13) > > This needs a push to the 1.9.2 branch. > > No it doesn't. The patch on bug 507032 hasn't been checked into 1.9.2 yet. So > this regression is trunk only. I made the initial report and it was found on branch
I just confirmed today's branch doesn't WFM. The relationship between bug 507302 and bug 507032 is not clear with this one.
Well branch happened on the 13 or 14th and the patch in bug 507032 landed on the 1st so this is on the branch.
Comment on attachment 396613 [details] [diff] [review] Patch v0.1 Sorry, that was my fault. Paul, I hope its ok for you that I ask for approval1.9.2 on your patch.
Attachment #396613 - Flags: approval1.9.2?
Comment on attachment 396613 [details] [diff] [review] Patch v0.1 And one more fault. It is already marked as blocker for 1.9.2. So only a check-in is needed.
Attachment #396613 - Flags: approval1.9.2?
(In reply to comment #12) > Do we have any tests in this area? Sadly not really. There's a specific Linux crash test but that's it. We do need more. I filed bug 513349 for that. I'll check this in today. We weren't green enough on branch Friday, else I would have done so already.
Whiteboard: [needs 1.9.2 landing]
Keywords: fixed1.9.2
Verified fixed with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a2pre) Gecko/20090902 Namoroka/3.6a2pre (.NET CLR 3.5.30729) ID:20090902052327
Keywords: verified1.9.2
Thanks, everybody
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: