Bug 512524 - Unable to set image as desktop background, r=robert.bugzilla